--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 .bg-orange-red{
     background-color: #cd3d0f;
 }
-
-
+.text-main-blue{
+    color: #0072ce;
+}
+.bg-main-blue{
+    background-color: #0072ce;
+}
 
 
 
