--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
 
 
 /* NAVBAR */
+.sony-navbar{
+    background-color: #000;
+    height: 35px;
+}
 /* HEADER */
 .hero{
     background-image: url(./img/jumbo-bg.png);
