--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ a{
 }
 
 /* MAIN */
-
 .sony-navbar{
     background-color: #000;
     height: 36px;
@@ -77,7 +76,12 @@ a{
 }
 .sony-navbar img{
     display: inline-block;
-    height: 100%;
+}
+.navbar-light .navbar-nav .nav-link {
+    color: #000
+}
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #0072ce
 }
 .navbar i{
     font-size: 0.6rem;
